# xdp-analysis

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: 1_model_comparison.html  1_model_comparison.ipynb
src/data/: __init__.py  har.py  mobility_lab.py
src/data_loader/: __init__.py  data_loader.py
src/layers/: conv_block.py
xdpanalysis/data/: __init__.py  har.py  mobility_lab.py
xdpanalysis/layers/: conv_block.py
xdpanalysis/models/: mobility_lab.py  xgb.py
xdpanalysis/training/: mobility_lab.py
