[tool.poetry]
name = "har-examples"
version = "0.1.0"
description = "Human Activity Recognition - Examples"
authors = ["Gleb Pankov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
torch = "^2.5.0"
umap-learn = "^0.5.6"
datashader = "^0.16.3"
bokeh = "^3.6.0"
holoviews = "^1.19.1"
scikit-image = "^0.24.0"
einops = "^0.8.0"
xgboost = "^2.1.1"
ipywidgets = "^8.1.5"
dask = "^2024.10.0"
h5py = "^3.12.1"
seaborn = "^0.13.2"
pyarrow = "^18.1.0"
openpyxl = "^3.1.5"
shap = "^0.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
