[project]
name = "xdp-analysis"
version = "0.1.0"
description = "XDP Analysis"
authors = ["Gleb Pankov"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.13.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.6.0",
    "umap-learn>=0.5.7",
    "xgboost>=2.1.4",
]
[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
]
